openai_scheduled_newsletter_api/k8s/oauth2-proxy-service-ref.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-external
  namespace: default
spec:
  type: ExternalName
  externalName: oauth2-proxy.oauth2-proxy.svc.cluster.local
  ports:
  - port: 4180
    targetPort: 4180
    protocol: TCP
